<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="app_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_app_button_text">Spotify Streamer</string>
    <string name="football_scores_app_button_text">Football Scores</string>
    <string name="library_app_button_text">Library App</string>
    <string name="build_it_bigger_app_button_text">Build It Bigger</string>
    <string name="xyz_reader_app_button_text">XYZ Reader</string>
    <string name="capstone_app_button_text">Capstone</string>

    <string name="app_toast_text">This button will launch my %s app</string>
</resources>
