<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".PortfolioActivity">

    <TextView android:text="@string/app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_large_material"
        android:textAppearance="@android:color/black"
        android:id="@+id/textView" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_app_button_text"
        android:textAllCaps="true"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:id="@+id/spotify_streamer_app_button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/football_scores_app_button_text"
        android:textAllCaps="true"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:id="@+id/football_scores_app_button"
        android:layout_below="@+id/spotify_streamer_app_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app_button_text"
        android:textAllCaps="true"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:id="@+id/library_app_button"
        android:layout_below="@+id/football_scores_app_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_app_button_text"
        android:textAllCaps="true"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:id="@+id/build_it_bigger_app_button"
        android:layout_below="@+id/library_app_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_app_button_text"
        android:textAllCaps="true"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:id="@+id/xyz_reader_app_button"
        android:layout_below="@+id/build_it_bigger_app_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app_button_text"
        android:textAllCaps="true"
        android:textSize="@dimen/abc_text_size_medium_material"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:id="@+id/capstone_app_button"
        android:layout_below="@+id/xyz_reader_app_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#F08C35" />

</RelativeLayout>
